12-03-2018/Lab-2
PYTHON DATA TYPES

>>> a=10
>>> b=20
>>> print(type(a))
<class 'int'>
>>> print(a,b)
10 20
>>> 
>>> x=10.00
>>> y=12.00
>>> print(type(x))
<class 'float'>
>>> print(x,y)
10.0 12.0
>>> 
>>> d=2+4j
>>> print(type(d))
<class 'complex'>
>>> print(d)
(2+4j)
>>> 
>>> bi=0B1010
>>> print(type(bi))
<class 'int'>
>>> print()bi
  File "<stdin>", line 1
    print()bi
            ^
SyntaxError: invalid syntax
>>> print(bi)
10
>>> 
>>> hd=0XFFF
>>> print(hd)
4095
>>> print(type(hd))
<class 'int'>
>>> 
>>> bo=True
>>> print(type(bo))
<class 'bool'>
>>> 
>>> print(bo)
True
>>> 
